--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: Noto Sans;
+    src: url('./assets/NotoSans-Regular.ttf');
+}
+body {
+    margin: 0;
+    padding: 0;
+    overflow:hidden;
+  }
